--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <div class="uk-modal-dialog uk-background-secondary">
             <button class="uk-background-secondary uk-modal-close-full uk-close-large" type="button" uk-close></button>
             <div class="uk-grid-collapse uk-child-width-1-2@s uk-flex-middle" uk-grid>
-                <div class="uk-background-cover" style="background-image: url('https://cdn.discordapp.com/attachments/854378301303947317/980474418683867136/DMulculture_logo_.JPG');" uk-height-viewport></div>
-                <div class="uk-padding-large">
+                <div class="uk-padding-large" uk-height-viewport>
                     <h1 class="uk-text-primary" style="font-family: Poppins;">About Us</h1>
                     <p class="uk-text-primary">D'Mulculture adalah sebuah
                         Event Organizer yang didirikan
                         oleh seluruh siswa-siswi kelas 
                         Al-Mulk angkatan Lastoforal.</p>
+                    <a href="" class="uk-button uk-button-secondary uk-text-capitalize" style="font-weight: 550;" data-tilt data-tilt-scale="1.1" >Ngoke <span uk-icon="icon : check"></span></a>
                 </div>
             </div>
         </div>
