--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <div class="uk-container uk-margin-xlarge-top ">
         <div class="heading">
-            <p class="uk-visible@m uk-text-center uk-text-secondary uk-text-break" style="font-weight: 700; font-size: 80px;" >Welcome To Dmulculture.</p>
+            <p class="uk-visible@m uk-text-center uk-text-secondary uk-text-break" style="font-weight: 700; font-size: 80px;" data-tilt data-tilt-full-page-listening>Welcome To Dmulculture.</p>
             <p class="uk-hidden@m uk-text-center uk-text-secondary uk-text-break" style="font-weight: 700; font-size: 55px;" >Welcome To Dmulculture.</p>
-            <p class=" uk-text-center uk-text-success uk-text-break" style="font-weight: 500; font-size: 25px;">JUNE 2022 &nbsp;│&nbsp; LANTAI 2</p>
+            <p class=" uk-text-center uk-text-success uk-text-break" style="font-weight: 500; font-size: 25px;" data-tilt data-tilt-full-page-listening>JUNE 2022 &nbsp;│&nbsp; LANTAI 1</p>
 
 
         </div>
